--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "vant": "^4.9.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -34,6 +35,8 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "prettier": "^3.2.5",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8"
   }
 }
