--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-vue": "^9.23.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
+    "postcss-loader": "^8.1.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.77.4",
     "unplugin-auto-import": "^0.17.6",
