--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "vant": "^4.9.0",
@@ -36,12 +37,14 @@
     "eslint-plugin-vue": "^9.23.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
+    "mockjs": "^1.1.0",
     "postcss-loader": "^8.1.1",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.77.4",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.2.8"
+    "vite": "^5.2.8",
+    "vite-plugin-mock": "^2.9.6"
   }
 }
