--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^3.2.5",
     "sass": "^1.77.4",
+    "terser": "^5.31.0",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.2.8",
