--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,5 @@
-VITE_APP_DEV = 'dev-api'
-VITE_APP_URL = 'http://192.168.0.0.1/api' 
+# 变量必须以 VITE_ 为前缀才能暴露给外部读取
+NODE_ENV = 'test'
+VITE_APP_TITLE = '硅谷甄选运营平台'
+VITE_APP_BASE_API = '/api'
+VITE_APP_PORT = '9527'
